# astropy-inherit-docstring-mwe

./: .cruft.json  .gitignore  README.rst  pyproject.toml  tox.ini
astropy_inherit_docstring_mwe/: example_mod.py
astropy_inherit_docstring_mwe/tests/: test_example.py
docs/: conf.py  index.rst
licenses/: LICENSE.rst
