[build-system]
requires = ["setuptools>=62.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astropy_inherit_docstring_mwe"
description = ""
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { text = "BSD-3-Clause" }
dependencies = ["astropy>6"]
version = "0.0.1"

[project.optional-dependencies]
test = ["pytest", "pytest-doctestplus", "pytest-cov"]
docs = ["sphinx", "sphinx-automodapi", "sphinx-astropy"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]


[tool.pytest.ini_options]
testpaths = ["astropy_inherit_docstring_mwe", "docs"]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
  "astropy_inherit_docstring_mwe/__init*",
  "astropy_inherit_docstring_mwe/conftest.py",
  "astropy_inherit_docstring_mwe/*setup_package*",
  "astropy_inherit_docstring_mwe/tests/*",
  "astropy_inherit_docstring_mwe/*/tests/*",
  "astropy_inherit_docstring_mwe/extern/*",
  "astropy_inherit_docstring_mwe/version*",
  "*/astropy_inherit_docstring_mwe/__init*",
  "*/astropy_inherit_docstring_mwe/conftest.py",
  "*/astropy_inherit_docstring_mwe/*setup_package*",
  "*/astropy_inherit_docstring_mwe/tests/*",
  "*/astropy_inherit_docstring_mwe/*/tests/*",
  "*/astropy_inherit_docstring_mwe/extern/*",
  "*/astropy_inherit_docstring_mwe/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
